; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_treeview.c_test_TVS_FULLROWSELECT.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_treeview.c_test_TVS_FULLROWSELECT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TVS_FULLROWSELECT = common dso_local global i32 0, align 4
@GWL_STYLE = common dso_local global i32 0, align 4
@TVS_HASLINES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"got style 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_TVS_FULLROWSELECT to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_TVS_FULLROWSELECT() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @TVS_FULLROWSELECT, align 4
  %4 = call i32 @create_treeview_control(i32 %3)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @GWL_STYLE, align 4
  %7 = call i32 @GetWindowLongA(i32 %5, i32 %6)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = load i32, i32* @TVS_FULLROWSELECT, align 4
  %10 = load i32, i32* @TVS_HASLINES, align 4
  %11 = or i32 %9, %10
  %12 = and i32 %8, %11
  %13 = load i32, i32* @TVS_FULLROWSELECT, align 4
  %14 = load i32, i32* @TVS_HASLINES, align 4
  %15 = or i32 %13, %14
  %16 = icmp eq i32 %12, %15
  %17 = zext i1 %16 to i32
  %18 = load i32, i32* %1, align 4
  %19 = call i32 @ok(i32 %17, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %18)
  %20 = load i32, i32* %2, align 4
  %21 = call i32 @DestroyWindow(i32 %20)
  %22 = call i32 @create_treeview_control(i32 0)
  store i32 %22, i32* %2, align 4
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @GWL_STYLE, align 4
  %25 = call i32 @GetWindowLongA(i32 %23, i32 %24)
  store i32 %25, i32* %1, align 4
  %26 = load i32, i32* %2, align 4
  %27 = load i32, i32* @GWL_STYLE, align 4
  %28 = load i32, i32* %1, align 4
  %29 = load i32, i32* @TVS_FULLROWSELECT, align 4
  %30 = or i32 %28, %29
  %31 = call i32 @SetWindowLongA(i32 %26, i32 %27, i32 %30)
  %32 = load i32, i32* %2, align 4
  %33 = load i32, i32* @GWL_STYLE, align 4
  %34 = call i32 @GetWindowLongA(i32 %32, i32 %33)
  store i32 %34, i32* %1, align 4
  %35 = load i32, i32* %1, align 4
  %36 = load i32, i32* @TVS_FULLROWSELECT, align 4
  %37 = and i32 %35, %36
  %38 = load i32, i32* %1, align 4
  %39 = call i32 @ok(i32 %37, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %38)
  %40 = load i32, i32* %2, align 4
  %41 = call i32 @DestroyWindow(i32 %40)
  ret void
}

declare dso_local i32 @create_treeview_control(i32) #1

declare dso_local i32 @GetWindowLongA(i32, i32) #1

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i32 @DestroyWindow(i32) #1

declare dso_local i32 @SetWindowLongA(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
